# high_x_of_y

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml
highxofy/: Dockerfile  pyproject.toml
highxofy/configs/: config_sample.toml  public_holidays.csv
highxofy/data/input/: sample.csv  sample_input.csv
highxofy/highxofy/: __main__.py  calculator.py  highxofy.py
