[tool.poetry]
name = "highxofy"
version = "0.1.0"
description = "calculate high x of y"
authors = ["gnkm"]

[tool.poetry.dependencies]
python = "^3.9"
single-source = "^0.2.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
pyproject-flake8 = "^0.0.1-alpha.2"
mypy = "^0.910"
isort = "^5.9.3"
flake8-bugbear = "^21.9.2"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pylint = "2.11.1"
icecream = "2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | dist
)
'''

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = [
  "E203",  # Whitespace before ':'
  "E221",  # multiple spaces before operator
  "E241",  # Multiple spaces after ','
]


[tool.mypy]
# common
python_version = 3.9
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119

[tool.pytest.ini_options]
addopts = "--color=yes --cov=calcpi --cov-report=html --cov-report=term -ra"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
